# tellurium

./: Makefile  pyproject.toml
example/: Makefile  dump_myself.py  dump_myself.yaml  main.yaml  make.py  make.yaml  plot_data.yaml  quick_check.py  quick_check.yaml
sample/: __main__.py
tellurium/: __init__.py  __main__.py  arguments.py  functional.py  make.py
tests/: test_arguments.py  test_square.py
